--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+  </head>
 
-    <head>
-        <meta charset="utf-8">
-    </head>
-
-    <body>
-        <style>
-            body {
-                padding: 0px;
-                margin: 0px;
-                background: #ffffff;
-            }
-        </style>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/phaser@3.3.0/dist/phaser.min.js"></script>
-        <script type="module" src="js/game.js"></script>
-    </body>
-
+  <body>
+    <style>
+      body {
+        padding: 0px;
+        margin: 0px;
+        background: #ffffff;
+      }
+    </style>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.3.0/dist/phaser.min.js"></script>
+    <script type="module" src="js/game.js"></script>
+  </body>
 </html>
