--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./menu.css" />
+    <link href="https://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet" />
+    <title>Document</title>
   </head>
-
   <body>
-    <style>
-      body {
-        padding: 0px;
-        margin: 0px;
-        background: #ffffff;
-      }
-    </style>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.3.0/dist/phaser.min.js"></script>
-    <script type="module" src="js/game.js"></script>
+    <div class="menu">
+      <input
+        id="input"
+        type="text"
+        placeholder="Enter your nickname"
+        class="menu-input"
+      />
+     
+
+       <a class="a-btn"  href="game.html"> <button type="button" class="menu-btn" ">Play</button> </a>
+      
+    </div>
   </body>
+  <script src="menu.js"></script>
 </html>
