--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./menu.css" />
     <link href="https://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet" />
-    <title>Document</title>
+    <title>Magica 🧙‍♂️</title>
   </head>
   <body>
     <div class="menu">
-      <input
-        id="input"
-        type="text"
-        placeholder="Enter your nickname"
-        class="menu-input"
-      />
-     
-
-       <a class="a-btn"  href="game.html"> <button type="button" class="menu-btn" ">Play</button> </a>
-      
+      <input id="input" type="text" placeholder="Enter your nickname" class="menu-input" />
+      <button type="button" class="menu-btn" onclick="SaveGamerSession()">Play</button>
     </div>
   </body>
-  <script src="menu.js"></script>
+  <script src="./js/menu.js"></script>
 </html>
