--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./menu.css" />
     <link href="https://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet" />
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <title>Magica 🧙‍♂️</title>
   </head>
   <body>
@@ -90,5 +90,6 @@
       </div>
     </div> -->
   </body>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="./js/menu.js"></script>
 </html>
