--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <div class="settings-box" id="settings-box">
         <div class="settings-content">
           <p>Chat history <input type="checkbox" /></p>
-          <p>History <input type="number" min="1" max="100"</p>
+          <p>History <input type="number" min="1" max="100"></p>
         </div>
       </div>
     </div>
