--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
       <div class="settings-box" id="settings-box">
         <div class="settings-content">
           <p>Chat history <input type="checkbox" /></p>
-          <p>History <input type="number" min="1" max="100"></p>
+          <p>History <input id="historychat-number-setting" type="number" min="1" max="100"></p>
+          <button type="button" onclick="SaveDataSeting()">Save</button>
         </div>
       </div>
     </div>
