--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       </button>
       <div class="settings-box" id="settings-box">
         <div class="settings-content">
-          <p>Chat history <input type="checkbox" /></p>
+          <p>Chat history <input type="checkbox" id="chat-history-checkbox"/></p>
           <p>History <input id="historychat-number-setting" type="number" min="1" max="100"></p>
           <button type="button" onclick="SaveDataSeting()">Save</button>
         </div>
