--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,12 @@
       <div class="settings-box" id="settings-box">
         <div class="settings-content">
           <p>
-            Chat history <input type="checkbox" id="chat-history-checkbox" />
+            Chat history
+            <input
+              type="checkbox"
+              id="chat-history-checkbox"
+              onclick="ChatHistory()"
+            />
           </p>
           <div id="chathistory" class="chathistory">
             <p class="">
