--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
               History
               <input
                 id="historychat-number-setting"
-                class=""
+                class="historynum"
                 type="number"
                 min="1"
                 max="100"
