--- a/public/404.html
+++ b/public/404.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="404" />
     <link rel="stylesheet" href="./menu.css" />
+    <link href="https://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet" />
   </head>
 
   <body>
