--- a/public/404.html
+++ b/public/404.html
@@ -9,6 +9,7 @@
 
   <body>
     <div class="nf-content">
+      <img src="./assets/alien.png" alt="alien" width="50" class="nf-img" />
       <h1 class="nf-name">404 NOT FOUND</h1>
       <a href="/"><button class="nf-btn">BACK TO HOME</button></a>
     </div>
