--- a/public/index.html
+++ b/public/index.html
@@ -60,9 +60,8 @@
         class="menu-input"
       />
       <span class="error-input" id="error-input"></span>
-      <button type="button" class="menu-btn" onclick="SaveGamerSession()">
-        Play
-      </button>
+
+      <a href="/room"><button type="button" class="menu-btn">Join</button></a>
     </div>
 
     <!-- Chat -->
