--- a/public/room.html
+++ b/public/room.html
@@ -11,6 +11,16 @@
   <body>
     <div class="room-content">
       <h1 class="roomh1">Rooms</h1>
+      <div class="crt">
+      <input
+        id="room-input"
+        type="text"
+        placeholder="Enter room name"
+        required
+        class="room-input"
+      />
+      <button class="crt-room">Create Room</button>
+    </div>
       <div class="room-list">
         <div class="cnt-room">
           Room 1
