--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,8 @@
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
     ></script> -->
-
     <title>Magica 🧙‍♂️</title>
   </head>
-
   <!-- Settings -->
   <header>
     <div class="settings-container">
@@ -21,51 +19,23 @@
       </button>
       <div class="settings-box" id="settings-box">
         <div class="settings-content">
-          <p>
-            Chat history
-            <input
-              type="checkbox"
-              id="chat-history-checkbox"
-              onclick="ChatHistory()"
-            />
-          </p>
+          <p>Chat history<input type="checkbox" id="chat-history-checkbox" onclick="ChatHistory()"/></p>
           <div id="chathistory" class="chathistory">
-            <p class="">
-              History
-              <input
-                id="historychat-number-setting"
-                class="historynum"
-                type="number"
-                min="1"
-                max="100"
-              />
-            </p>
+            <p class="">History<input id="historychat-number-setting" class="historynum" type="number" min="1" max="100"/></p>
           </div>
-          <button type="button" class="save-btn" onclick="SaveDataSeting()">
-            Save
-          </button>
+          <button type="button" class="save-btn" onclick="SaveDataSeting()">Save</button>
         </div>
       </div>
     </div>
   </header>
-
   <!-- Main -->
   <body>
     <div class="menu">
-      <input
-        id="input"
-        type="text"
-        placeholder="Enter your nickname"
-        required
-        class="menu-input"
-      />
+      <input id="input" type="text" placeholder="Enter your nickname" required class="menu-input"/>
       <span class="error-input" id="error-input"></span>
-
-      <a href="/room"><button type="button" class="menu-btn">Join</button></a>
+      <button type="button" class="menu-btn" onclick="SaveGamerSession()">Join</button>
     </div>
-
     <!-- Chat -->
-    
     <div class="chat-container">
       <button class="open-button" onclick="toggleChat()">
         <img src="./assets/chat.png" alt="Chat" />
@@ -76,12 +46,7 @@
           <div class="received-message"></div>
         </div>
         <div class="chat-input">
-          <input
-            class="inpt"
-            type="text"
-            id="message"
-            placeholder="Type your message..."
-          />
+          <input class="inpt" type="text" id="message" placeholder="Type your message..." />
           <button class="btn-send" onclick="sendMessage()">Send</button>
         </div>
       </div>
