--- a/public/room.html
+++ b/public/room.html
@@ -2,23 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <title>Room</title>
     <link rel="stylesheet" href="./menu.css" />
     <link href="https://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet" />
   </head>
-
   <body>
     <div class="room-content">
       <h1 class="roomh1">Rooms</h1>
       <div class="crt">
-      <input
-        id="room-input"
-        type="text"
-        placeholder="Enter room name"
-        required
-        class="room-input"
-      />
+      <input id="room-input" type="text" placeholder="Enter room name" required class="room-input"/>
       <button class="crt-room">Create Room</button>
     </div>
       <div class="room-list">
@@ -41,4 +33,6 @@
       </div>
     </div>
   </body>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="./js/room.js"></script>
 </html>
