--- a/public/index.html
+++ b/public/index.html
@@ -63,9 +63,40 @@
 
       <a href="/room"><button type="button" class="menu-btn">Join</button></a>
     </div>
+    <div class="room-content">
+      <h1 class="roomh1">Rooms</h1>
+      <div class="crt">
+        <input
+          id="room-input"
+          type="text"
+          placeholder="Enter room name"
+          required
+          class="room-input"
+        />
+        <button class="crt-room">Create Room</button>
+      </div>
+      <div class="room-list">
+        <div class="cnt-room">
+          Room 1
+          <p class="room-online">Online 5/10</p>
+        </div>
+        <div class="cnt-room">
+          Room 2
+          <p class="room-online">Online 2/10</p>
+        </div>
+        <div class="cnt-room">
+          Room 3
+          <p class="room-online">Online 10/10</p>
+        </div>
+        <div class="cnt-room">
+          Room 4
+          <p class="room-online">Online 6/10</p>
+        </div>
+      </div>
+    </div>
 
     <!-- Chat -->
-    
+
     <div class="chat-container">
       <button class="open-button" onclick="toggleChat()">
         <img src="./assets/chat.png" alt="Chat" />
